# TetrisUNIVE

./: .gitignore  CMakeLists.txt  Doxyfile  NPC_tetris.c  NPC_tetris.h  README.md  Relazione.docx  input_control.c  input_control.h  main.c  main.h  tetris_components.c  tetris_components.h  tetris_operations.c  tetris_operations.h  tetris_print.c  tetris_print.h  ~$lazione.docx  ~WRL1852.tmp
doc/html/: _n_p_c__tetris_8h.html  input__control_8h.html  main_8h.html  main_8h_source.html  md__r_e_a_d_m_e.html  tetris__components_8h.html  tetris__operations_8h.html  tetris__print_8h.html
doc/latex/: _n_p_c__tetris_8h.tex  input__control_8h.tex  main_8h.tex  main_8h_source.tex  tetris__components_8h.tex  tetris__operations_8h.tex  tetris__print_8h.tex
